package com.simra.konsumgandalf.common.models.enums;

/**
 * This enum represents the different days of the week.
 */
public enum WeekDays {

	/**
	 * Monday to Friday
	 */
	WEEK,
	/**
	 * Saturday and Sunday
	 */
	WEEKEND,
	/**
	 * All days of the week
	 */
	ALL_WEEK

}
